--- a/css/app.css
+++ b/css/app.css
@@ -1,3 +1,12 @@
+@import url("bootstrap.css");
+
 section.panel {
-  margin-left: 37px;
+    margin-left: 37px;
+}
+
+.miceli {
+    background-color: green;
+}
+.marina {
+    background-color: cyan;
 }
