add notes row hover

--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -12,6 +12,7 @@
     <thead ng-controller="tHeadController">
       <tr>
           <th> Day    </th>
+          <th>        </th>
           <th> Date   </th>
           <th> Clinic </th>
           <th
@@ -41,8 +42,10 @@
       <tr
         ng-repeat="event in events"
         ng-controller="EventController as E"
-        ng-init="E.init(event)">
-          <td> <em ng-show="$index > 1"> {{$index - 1}} </em> </td>
+        ng-init="E.init(event)"
+        title="{{event.notes}}">
+          <td align="right"> <span class="badge" ng-show="$index > 1"> {{$index - 1}} </span> </td>
+          <td> <span class="glyphicon lyphicon glyphicon-list-alt" ng-show="event.notes"></span> </td>
           <td ng-bind="event.date"></td>
           <td>
             <span class="badge miceli" ng-show="E.atClinic(0)" ng-repeat="person in E.getClinicVisitors(0)" ng-bind="person"></span>
