--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -1,14 +1,5 @@
-<section class="panel panel-default">
-  <div class="panel-heading">
-    Daily Log of the events that happened during Carbon's recovery,
-    basically what drugs he got when.</div>
-  <div class="panel-body">
-    <p> Carbie's femur found a car's bumper on the last day of May 2014, a
-    Saturday.  This log beings when he had his surgery, the following Monday,
-    June 2nd. </p>
-  </div>
-
   <table class="table table-striped">
+    <caption>Meds</caption>
     <thead ng-controller="tHeadController">
       <tr>
           <th> Day    </th>
@@ -63,6 +54,5 @@
             </span>
           </td>
       </tr>
-  </tbody>
-</table>
-</section>
+    </tbody>
+  </table>
