--- a/app/partials/partial2.html
+++ b/app/partials/partial2.html
@@ -1,6 +1,6 @@
   <table class="table table-striped">
     <caption>Costs</caption>
-    <thead ng-controller="tHeadController">
+    <thead ng-controller="MedController">
       <tr>
           <th> Day    </th>
           <th>        </th>
@@ -9,7 +9,7 @@
           <th ng-repeat="med in meds"> $$$$$$$$$$ </th>
       </tr>
     </thead>
-    <tbody ng-controller="tBodyController">
+    <tbody ng-controller="EventsController">
       <tr
         ng-repeat="event in events"
         ng-controller="EventController as E"
