--- a/app/css/app.css
+++ b/app/css/app.css
@@ -43,7 +43,29 @@
   font-size: 2em;
 }
 
+/* grid*/
+
+.gridStyle {
+  display: inline-table;
+  border: 1px solid rgb(212,212,212);
+  width: 600px;
+  /*height: 300px;*/
+}
+.gridStyle .lalign {
+  text-align: left;
+}
+.gridStyle .ralign {
+  text-align: right;
+}
+
 /* other */
+
+.data-container {
+  text-align: center;
+}
+.banner {
+  font-size: 2em;
+}
 
 .miceli {
   background-color: green;
