--- a/app/partials/partial1.html
+++ b/app/partials/partial1.html
@@ -56,3 +56,49 @@
       </tr>
     </tbody>
   </table>
+
+  <section>
+    <div class="hero-unit">
+      <div class="container">
+        <p>
+         <span class="label label-primary">Zosia observed</span>
+         <span class="label label-default">Zosia did not observe</span>
+         Visits to clinics
+         <span class="badge miceli">Miceli</span>:
+         <span class="badge miceli">C</span>Carbon
+         <span class="badge miceli">Z</span>Zosia
+         <span class="badge miceli">A</span>Aga
+         <span class="badge miceli">R</span>Rocio
+         <span class="badge miceli">S</span>Steven
+         <span class="badge marina">Marina</span>:
+         <span class="badge marina">C</span>Carbon
+         <span class="badge marina">Z</span>Zosia
+         <span class="badge marina">S</span>Steven
+        </p>
+        <p class="alert alert-info">
+         <span class="glyphicon glyphicon-hand-right"></span>
+         Notes on <strong>Cannabis</strong>: dosage before June
+           18th is estimated.
+        </p>
+        <p class="alert alert-info">
+         <span class="glyphicon glyphicon-hand-right"></span>
+         Notes on <strong>Carprofen</strong>: Rimadyl used except for
+           June 13-16 when he got Carprobay from Bayer.
+        </p>
+        <p class="alert alert-info">
+         <span class="glyphicon glyphicon-hand-right"></span>
+         Notes for <strong>June 2nd - 5th</strong>: Probably he got
+           some hard-core opiates in the Clinic but we are not sure
+           what he got actually.
+        </p>
+        <p class="alert alert-info">
+         <span class="glyphicon glyphicon-hand-right"></span>
+         Notes for <strong>June 23rd</strong>: Received 1 ml of Xilacina
+         (Xylazine sold as Rompun by Bayer) in Marina's clinic to calm
+         him for his X-ray. Even though he was sedated he still fought
+         like hell to not allow us to turn him upside down, which might
+         have contributed to the hip joint noise becoming very ould now.
+        </p>
+      </div>
+    </div>
+  </section>
