--- a/app/css/app.css
+++ b/app/css/app.css
@@ -49,13 +49,15 @@
   display: inline-table;
   border: 1px solid rgb(212,212,212);
   width: 600px;
-  /*height: 300px;*/
 }
 .gridStyle .lalign {
   text-align: left;
 }
 .gridStyle .ralign {
   text-align: right;
+}
+.gridStyle .ngFooterTotalCost {
+  font-size: 1.5em;
 }
 
 /* other */
