--- a/app/partials/ngGrid.html
+++ b/app/partials/ngGrid.html
@@ -9,31 +9,19 @@
     <div ng-show="showFooter" class="ngFooterPanel" ng-style="footerStyle()">
       <div class="ngTotalSelectContainer">
 
+
+        <div class="ngFooterSelectedItems" ng-show="selectedItems.length">
+          <span class="ngLabel">
+            {{ i18n.ngSelectedItemsLabel }} {{ selectedItems.length }} @
+            {{ selected_cost | currency:"MXN$ " }}
+          </span>
+        </div>
+
         <div class="ngFooterTotalItems">
-          <span class="ngLabel"> {{ i18n.ngTotalItemsLabel }} {{ maxRows() }}</span>
-          <span ng-show="filterText.length > 0" class="ngLabel">
-            ( {{ i18n.ngShowingItemsLabel }} x {{ totalFilteredItemsLength() }} )
-          </span>
-        </div>
-
-        <div class="ngFooterSelectedItems" ng-show="multiSelect">
           <span class="ngLabel">
-            {{ i18n.ngSelectedItemsLabel }} {{ selectedItems.length }}
+            {{ i18n.ngTotalItemsLabel }} {{ maxRows() }} @
+            {{ total_cost | currency:"MXN$ " }}
           </span>
-        </div>
-
-        <div class="ngFooterSelectedItems" ng-show="multiSelect">
-          <span class="ngLabel">
-          {{selectedItems}}
-          </span>
-        </div>
-
-        <div class="ngFooterSelectedItems" ng-show="multiSelect">
-          <span class="ngLabel" ng-repeat="x in selectedItems"></span>
-        </div>
-
-        <div class="ngFooterTotalCost">
-          <span class="ngLabel"> Total Cost: {{ total_cost | currency:"MXN$" }} </span>
         </div>
 
       </div>
