--- a/app/partials/front.html
+++ b/app/partials/front.html
@@ -1,5 +1,7 @@
 <div class="data-container">
 
-  <p class="banner"> Home </p>
+  <p><img src="http://warriorself.com/blog/wp-content/gallery/2013/carbon-carribbean-sunset_2798.jpg"></p>
+
+  <p class="banner"> Carbon </p>
 
 </div>
