add ng-grid select-all/select-none checkbox

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -72,7 +72,7 @@
   background-color: orange;
 }
 .badge.w3 {
-  background-color: yellow;
+  background-color: gold;
 }
 .badge.w4 {
   background-color: green;
