css badges update

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -86,6 +86,27 @@
 .badge.w7 {
   background-color: violet;
 }
+.badge.w8 {
+  background-color: red;
+}
+.badge.w9 {
+  background-color: orange;
+}
+.badge.w10 {
+  background-color: gold;
+}
+.badge.w11 {
+  background-color: green;
+}
+.badge.w12 {
+  background-color: blue;
+}
+.badge.w13 {
+  background-color: indigo;
+}
+.badge.w14 {
+  background-color: violet;
+}
 .miceli {
   background-color: green;
 }
