--- a/app/partials/HTML.html
+++ b/app/partials/HTML.html
@@ -36,8 +36,9 @@
         ng-init="E.init($index, event)"
         title="{{event.notes}}">
           <td align="right">
-            <span ng-bind="E.day"  ng-show="E.day > 0" class="badge"></span>
-            <span ng-bind="E.week" ng-show="E.day > 0" class="badge w{{E.week}}"></span>
+            <span ng-bind="E.prpday" ng-show="E.prpday > 0" title="Days after PrP surgury"      class="badge"></span>
+            <span ng-bind="E.day"    ng-show="E.day > 0"    title="Days after initial surgury"  class="badge"></span>
+            <span ng-bind="E.week"   ng-show="E.day > 0"    title="Weeks after initial surgury" class="badge w{{E.week}}"></span>
           </td>
           <td> <span class="glyphicon lyphicon glyphicon-list-alt" ng-show="event.notes"></span> </td>
           <td ng-bind="event.date"></td>
