--- a/app/css/app.css
+++ b/app/css/app.css
@@ -39,6 +39,12 @@
 
 /* table */
 
+.table td {
+  white-space: nowrap;
+}
+.table td.notes, .table td.meds {
+  white-space: inherit;
+}
 .table caption {
   font-size: 2em;
 }
