fix Carbi spelling

--- a/app/partials/front.html
+++ b/app/partials/front.html
@@ -2,6 +2,6 @@
 
   <p><img src="http://warriorself.com/blog/wp-content/gallery/2013/carbon-carribbean-sunset_2798.jpg"></p>
 
-  <p class="banner"> Carbon </p>
+  <p class="banner"> Carbón </p>
 
 </div>
