--- a/app/partials/notes.html
+++ b/app/partials/notes.html
@@ -1,4 +1,4 @@
-  <table class="table table-striped table-hover">
+  <table class="table table-striped table-hover table-notes container">
     <caption> Notes </caption>
     <thead ng-controller="MedController">
       <tr>
