--- a/app/partials/front.html
+++ b/app/partials/front.html
@@ -1,37 +1,40 @@
 <div class="data-container">
-
-    <p><img src="http://warriorself.com/blog/wp-content/gallery/2013/carbon-carribbean-sunset_2798.jpg"></p>
-
-    <p class="banner"> Carbón </p>
-
+    <p align="right">
+        <a href="#/image">
+            <img
+              src="http://warriorself.com/blog/wp-content/gallery/2013/carbon-carribbean-sunset_2798.jpg"
+              width="430px"
+              title="Carbón"
+            ></a>
+    </p>
 </div>
 
 <table class="table table-striped table-hover table-notes container">
     <caption> Notes </caption>
     <thead>
-      <tr>
-          <th style="text-align: right" > Day </th>
-          <th style="text-align: center"> Date </th>
-          <th> Notes </th>
-      </tr>
+        <tr>
+            <th style="text-align: right" > Day </th>
+            <th style="text-align: center"> Date </th>
+            <th> Notes </th>
+        </tr>
     </thead>
     <tbody ng-controller="EventsController">
-      <tr
-        ng-repeat="event in events"
-        ng-controller="EventController as E"
-        ng-init="E.init($index, event)">
-          <td align="right">
-            <span ng-bind="E.day" ng-show="E.day > 0" title="Days after initial surgury" class="badge B{{ Math.floor((E.day - 1) / 30 + 1) % 7 }}"></span>
-          </td>
-          <td ng-bind="event.date"></td>
-          <td class="notes" ng-bind-html="event.notes | rawHtml"></td>
-      </tr>
+        <tr
+          ng-repeat="event in events"
+          ng-controller="EventController as E"
+          ng-init="E.init($index, event)">
+            <td align="right">
+                <span ng-bind="E.day" ng-show="E.day > 0" title="Days after initial surgury" class="badge B{{ Math.floor((E.day - 1) / 30 + 1) % 7 }}"></span>
+            </td>
+            <td ng-bind="event.date"></td>
+            <td class="notes" ng-bind-html="event.notes | rawHtml"></td>
+        </tr>
     </tbody>
     <tfoot>
-      <tr>
-          <th style="text-align: right"> Day </th>
-          <th> Date  </th>
-          <th> Notes </th>
-      </tr>
+        <tr>
+            <th style="text-align: right"> Day </th>
+            <th> Date  </th>
+            <th> Notes </th>
+        </tr>
     </tfoot>
 </table>
