--- a/app/partials/front.html
+++ b/app/partials/front.html
@@ -22,9 +22,10 @@
         <tr
           ng-repeat="event in events"
           ng-controller="EventController as E"
-          ng-init="E.init($index, event)">
+          ng-init="E.init($index, event)"
+          ng-show="event.notes">
             <td align="right">
-                <span ng-bind="E.day" ng-show="E.day > 0" title="Days after initial surgury" class="badge B{{ Math.floor((E.day - 1) / 30 + 1) % 7 }}"></span>
+                <span ng-bind="E.day" ng-show="E.day > 0" title="{{ E.day }} Days after initial surgury" class="badge B{{ Math.floor((E.day - 1) / 30 + 1) % 7 }}"></span>
             </td>
             <td ng-bind="event.date"></td>
             <td class="notes" ng-bind-html="event.notes | rawHtml"></td>
