new carbi image

--- a/app/partials/front.html
+++ b/app/partials/front.html
@@ -2,7 +2,7 @@
     <p align="right">
         <a href="#/image">
             <img
-              src="http://warriorself.com/blog/wp-content/gallery/2013/carbon-carribbean-sunset_2798.jpg"
+              src="http://centerstar.org/img/Carbi_8901_portrait.jpg"
               width="430px"
               title="Carbón"
             ></a>
