--- a/app/partials/image.html
+++ b/app/partials/image.html
@@ -1,6 +1,6 @@
 <div class="data-container">
     <img
-      src="http://warriorself.com/blog/wp-content/gallery/2013/carbon-carribbean-sunset_2798.jpg"
+      src="http://centerstar.org/img/Carbi_8901_portrait.jpg"
       title="Carbón"
     >
 </div>
