--- a/app/partials/front.html
+++ b/app/partials/front.html
@@ -1,24 +1,21 @@
 <div class="data-container">
-    <div class="blurb">
-        <p>
-            Hi! My name is Carbón. Friends call me Carbi. I was born in the land of the Maya, southern Mexico. While living on the street in my home town I met Zofi and Steven, we started hanging out and then one day I just moved into their house... and they did not ask me out. Cool! That was one happy day!
-        </p>
-        <p>
-            I love to swim in the river, chase birds and go for bike runs... yet I have not been able to do any of those for one year now. I had an accident on the last day of May 2015 and my femur got fractured into multiple pieces. No doctors in our town wanted to fix my leg so my Humans brought me to the best doctor there is in the state of Chiapas. I got operated five times already but my leg still hurts and recently when they took the metal fixation out, the bone was too week and it broke again. I was so sad because I thought soon I could be running just like I did before.
-        </p>
-        <p>
-            My Humans are now thinking what to do, where to find a good clinic with experienced doctors. They mentioned something about going to the United States. They say it is very far away, it is a place I don't know yet... but Steven is from there and he would take care of me. Good that I learned some English with my Humans, because they say it will be very useful there. I just want to walk and run again and I will follow them anywhere.
-        </p>
-    </div>
-    <div class="image">
+    <div>
         <a href="#/image">
             <img
               src="http://centerstar.org/img/Carbi_8901_portrait.jpg"
               title="Carbón"
               width="430px"
             ></a>
+        <p>
+            <big>Hi!</big> My name is Carbón, friends call me &quot;Carbi&quot;. I was born in the <em>land of the Maya</em>, southern Mexico. While living on the street in my home town I met Zofi; as soon as our eyes met it was love at first sight. She took me to her home and I met Steven. We started hanging out and the next thing I know we were all living together. That was one happy day!
+        </p>
+        <p>
+            I love to swim in the river, chase birds and go for bike runs... yet I have not been able to do any of these for one year now. I had an accident on the last day of May 2014 and my femur got fractured into multiple pieces. No doctors in our town wanted to fix my leg so my Humans brought me to the best doctor in our state of Chiapas, Mexico. I got operated on five times already but my leg still hurts and recently when they took the metal fixation out, the bone was too week and it broke again. I was so sad because I thought soon I could be running just like I did before.
+        </p>
+        <p>
+            My Humans are now thinking about what to do and where to find a good clinic with experienced doctors. They mentioned something about going to the United States. They say it is very far away, a place I don't know yet... but Steven is from there and he would take care of me. Good that I learned some English with my Humans because they say it will be very useful there. I just want to walk and run again. I will follow them anywhere.
+        </p>
     </div>
-    <br clear="all">
 </div>
 
 <table class="table table-striped table-hover table-notes container">
@@ -53,13 +50,26 @@
 
 <style type="text/css">
     .data-container div {
-        display: table-cell;
-        vertical-align: middle;
-        max-width: 800px;
+      max-width: 900px;
+      display: inline-block;
     }
-    .data-container .blurb {
+    .data-container img {
+        float: right;
+        margin-left: 2em;
+        margin-bottom: 2em;
+    }
+    .data-container p {
         text-align: left;
-        padding-left: 2em;
-        padding-right: 2em;
+        line-height: 1.6;
+    }
+    .data-container big {
+        font-size: 2em;
+    }
+    .data-container p :first-child :first-letter {
+        font-size: 160px;
+        float: left;
+        margin: 20px 20px 0 0;
+        line-height: 0.8;
+        text-shadow: 4px 4px 0 #566074, 7px 7px 0 #fff;
     }
 </style>
