--- a/app/partials/notes.html
+++ b/app/partials/notes.html
@@ -14,11 +14,12 @@
         ng-repeat="event in events"
         ng-controller="EventController as E"
         ng-init="E.init($index, event)"
+        ng-show="event.notes"
         >
           <td align="right">
-            <span ng-bind="E.prpday" ng-show="E.prpday > 0" title="Days after PrP surgury"      class="badge"></span>
-            <span ng-bind="E.day"    ng-show="E.day > 0"    title="Days after initial surgury"  class="badge B{{ Math.floor((E.day - 1) / 30 + 1) % 7 }}"></span>
-            <span ng-bind="E.week"   ng-show="E.day > 0"    title="Weeks after initial surgury" class="badge B{{ E.week % 7 }}"></span>
+            <span ng-bind="E.prpday" ng-show="E.prpday > 0" title="{{ E.prpday }} Days after PrP surgury"      class="badge"></span>
+            <span ng-bind="E.day"    ng-show="E.day > 0"    title="{{ E.day    }} Days after initial surgury"  class="badge B{{ Math.floor((E.day - 1) / 30 + 1) % 7 }}"></span>
+            <span ng-bind="E.week"   ng-show="E.day > 0"    title="{{ E.week   }} Weeks after initial surgury" class="badge B{{ E.week % 7 }}"></span>
           </td>
           <td>
             <span class="glyphicon lyphicon glyphicon-list-alt" ng-show="event.notes" title="Note for this date"></span>
