add year to events data and lightend table hover color

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -52,7 +52,7 @@
   font-size: 2em;
 }
 .table-hover tbody tr:hover td {
-  background-color: #A0C1FB;
+  background-color: #CDE1FF;
 }
 
 /* grid*/
