notes data updates

--- a/app/partials/xrays.html
+++ b/app/partials/xrays.html
@@ -42,7 +42,7 @@
           <h4 class="modal-title" id="myModalLabel">X-ray preview</h4>
         </div>
         <div class="modal-body">
-          <img id="imagepreview" title="Click to open full-size." src="">
+          <img id="imagepreview" title="Click to open full-size in a new window." src="">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
