--- a/app/partials/xrays.html
+++ b/app/partials/xrays.html
@@ -30,19 +30,24 @@
       width: 50px;
       padding: 5px;
     }
+    .modal-body {
+      text-align: center;
+    }
   </style>
 
   <script src="js/xrays.js"></script>
 
-  <div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div id="xrayDialog" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="xrayModalTitle" aria-hidden="true">
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-          <h4 class="modal-title" id="myModalLabel">X-ray preview</h4>
+          <button type="button" class="close" data-dismiss="modal">
+            <span aria-hidden="true">&times;</span><span class="sr-only">Close</span>
+          </button>
+          <h4 id="xrayModalTitle" class="modal-title"> X-ray preview </h4>
         </div>
         <div class="modal-body">
-          <img id="imagepreview" title="Click to open full-size in a new window." src="">
+          <img id="xrayModalPreview" title="Click to open full-size in a new window." src="">
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
