xray title cleanup

--- a/app/partials/xrays.html
+++ b/app/partials/xrays.html
@@ -30,7 +30,7 @@
       width: 50px;
       padding: 5px;
     }
-    .modal-body {
+    .modal-title, .modal-body {
       text-align: center;
     }
   </style>
