--- a/app/partials/front.html
+++ b/app/partials/front.html
@@ -35,7 +35,7 @@
             <td align="right">
                 <span ng-bind="E.day" ng-show="E.day > 0" title="{{ E.day }} Days after initial surgury" class="badge B{{ Math.floor((E.day - 1) / 30 + 1) % 7 }}"></span>
             </td>
-            <td ng-bind="event.date"></td>
+            <td class="event-date" ng-bind="event.date"></td>
             <td class="notes" ng-bind-html="event.notes | rawHtml"></td>
         </tr>
     </tbody>
