--- a/app/partials/meds.html
+++ b/app/partials/meds.html
@@ -4,7 +4,7 @@
       <tr>
           <th style="text-align: right"> Day/Wk </th>
           <th>        </th>
-          <th> Date   </th>
+          <th style="text-align: center"> Date </th>
           <th> Clinic </th>
           <th
             ng-repeat="med in meds"
@@ -44,7 +44,7 @@
             <span class="glyphicon lyphicon glyphicon-list-alt" ng-show="event.notes" title="Note for this date"></span>
             <span class="glyphicon lyphicon glyphicon-picture" ng-show="event.notes | xRay" title="X-ray for this date"></span>
           </td>
-          <td ng-bind="event.date"></td>
+          <td class="event-date" ng-bind="event.date"></td>
           <td>
             <span class="badge miceli" ng-show="E.atClinic(0)" ng-repeat="person in E.getClinicVisitors(0)" ng-bind="person"></span>
             <span class="badge marina" ng-show="E.atClinic(1)" ng-repeat="person in E.getClinicVisitors(1)" ng-bind="person"></span>
