--- a/app/partials/front.html
+++ b/app/partials/front.html
@@ -33,7 +33,7 @@
           ng-init="E.init($index, event)"
           ng-show="event.notes">
             <td align="right">
-                <span ng-bind="E.day" ng-show="E.day > 0" title="{{ E.day }} Days after initial surgury" class="badge B{{ Math.floor((E.day - 1) / 30 + 1) % 7 }}"></span>
+                <span ng-bind="event.day" ng-show="event.day > 0" title="{{ event.day }} Days after initial surgury" class="badge"></span>
             </td>
             <td class="event-date" ng-bind="event.date"></td>
             <td class="notes" ng-bind-html="event.notes | rawHtml"></td>
