--- a/app/partials/notes.html
+++ b/app/partials/notes.html
@@ -17,9 +17,9 @@
         ng-show="event.notes"
         >
           <td align="right">
-            <span ng-bind="E.prpday" ng-show="E.prpday > 0" title="{{ E.prpday }} Days after PrP surgury"      class="badge"></span>
-            <span ng-bind="E.day"    ng-show="E.day > 0"    title="{{ E.day    }} Days after initial surgury"  class="badge B{{ Math.floor((E.day - 1) / 30 + 1) % 7 }}"></span>
-            <span ng-bind="E.week"   ng-show="E.day > 0"    title="Week {{ E.week   }} after initial surgury" class="badge B{{ E.week % 7 }}"></span>
+            <span ng-bind="event.prpday" ng-show="event.prpday > 0" title="{{ event.prpday }} Days after PrP surgury"     class="badge"></span>
+            <span ng-bind="event.day"    ng-show="event.day > 0"    title="{{ event.day    }} Days after initial surgury" class="badge"></span>
+            <span ng-bind="event.week"   ng-show="event.day > 0"    title="Week {{ event.week }} after initial surgury"   class="badge"></span>
           </td>
           <td>
             <span class="glyphicon lyphicon glyphicon-list-alt" ng-show="event.notes" title="Note for this date"></span>
